// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`a.js format 1`] = `
====================================options=====================================
parsers: ["flow"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
/**
 * @providesModule A
 * @flow
 */

(require('./b'): void);
(require('C'): void);

module.exports = 'A';

=====================================output=====================================
/**
 * @providesModule A
 * @flow
 */

(require("./b"): void);
(require("C"): void);

module.exports = "A";

================================================================================
`;

exports[`b.js format 1`] = `
====================================options=====================================
parsers: ["flow"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
/**
 * @providesModule B
 * @flow
 */

(require('A'): void);
(require('D'): void);

module.exports = 'B';

=====================================output=====================================
/**
 * @providesModule B
 * @flow
 */

(require("A"): void);
(require("D"): void);

module.exports = "B";

================================================================================
`;

exports[`c.js format 1`] = `
====================================options=====================================
parsers: ["flow"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
/**
 * @providesModule C
 * @flow
 */

require('Root');
(require('./b'): void);

module.exports = 'C';

=====================================output=====================================
/**
 * @providesModule C
 * @flow
 */

require("Root");
(require("./b"): void);

module.exports = "C";

================================================================================
`;

exports[`d.js format 1`] = `
====================================options=====================================
parsers: ["flow"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
/**
 * @providesModule D
 * @flow
 */

(require('./b'): void);

module.exports = 'D';

=====================================output=====================================
/**
 * @providesModule D
 * @flow
 */

(require("./b"): void);

module.exports = "D";

================================================================================
`;

exports[`root.js format 1`] = `
====================================options=====================================
parsers: ["flow"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
/**
 * @providesModule Root
 * @flow
 */

module.exports = 'Root';

=====================================output=====================================
/**
 * @providesModule Root
 * @flow
 */

module.exports = "Root";

================================================================================
`;
